[package]
name = "webmonitors"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
description = "Monitors websites and sends emails and web requests when they change"
edition = "2018"

[dependencies]
clap = "~2.33"
lettre = "~0.9"
reqwest = "~0.9"
serde = "~1.0"
serde_derive = "~1.0"
toml = "~0.5"