[package]
name = "wbmrs"
version = "1.0.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
description = "Monitors websites and sends emails and web requests when they change"
edition = "2018"
homepage = "https://github.com/raftario/webmonito-rs#readme"
repository = "https://github.com/raftario/webmonito-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33"
rust-crypto = "~0.2"
lettre = "~0.9"
reqwest = "~0.9"
serde = "1.0"
serde_derive = "1.0"
toml = "~0.5"

[badges]
travis-ci = { repository = "raftario/webmonito-rs" }
appveyor = { repository = "raftario/webmonito-rs" }